--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, 'script', 'dataLayer', 'GTM-MM79V2N');
+    </script>
+    <!-- End Google Tag Manager -->
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/png" href="" />
     <meta charset="utf-8" />
@@ -18,8 +32,36 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-130079000-2"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-130079000-2');
+    </script>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-MM79V2N"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden;"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="header">
       <div class="logo">
         <a href="index.html">
@@ -72,6 +114,66 @@
         </div>
       </div>
     </div>
+
+    <!-- Site footer -->
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-6">
+            <h6>About</h6>
+            <p class="text-justify">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Corrupti, tempore aspernatur! Eveniet, voluptate reprehenderit! Id
+              rerum sapiente perferendis ullam nesciunt numquam dignissimos
+              quasi maxime quod! Optio quibusdam doloribus dolorum molestias!
+            </p>
+          </div>
+
+          <div class="col-xs-6 col-md-3">
+            <h6>Užitečné odkazy</h6>
+            <ul class="footer-links">
+              <li>
+                <a href="https://discord.gg/8ZVu3na"
+                  >Přpojte se na náš Discord server</a
+                >
+              </li>
+
+              <li>
+                <a href="resources.html">Použitý kód a fotky</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="col-xs-6 col-md-3">
+            <h6>Rychlé odkazy</h6>
+            <ul class="footer-links">
+              <li>
+                <a href="https://github.com/Kendy205/gvhkvarta">Přidejte kód</a>
+              </li>
+              <li>
+                <a href="privacipolicy.html">Privacy Policy</a>
+              </li>
+              <li><a href="sitemap.html">Mapa stránek</a></li>
+            </ul>
+          </div>
+        </div>
+        <hr />
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-sm-6 col-xs-12">
+            <p class="copyright-text">
+              Copyright &copy; 2020 All Rights Reserved by
+              <a href="#">gvhkvarta.cf</a>.
+            </p>
+            <p class="made">
+              Made with <i class="fas fa-heart"></i> by Tomáš Kebrle, Daniel
+              Ransdorf
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!--Scripty-->
     <script>
