--- a/resources.html
+++ b/resources.html
@@ -19,6 +19,14 @@
     <link rel="icon" type="image/png" href="" />
     <meta charset="utf-8" />
     <title>Úvod|gvhkvarta.cf</title>
+    <!-- Compiled and minified CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script
       src="https://kit.fontawesome.com/29ece32e74.js"
       crossorigin="anonymous"
