.htacces, nový footer a Sitemap a privacy
Přidán ,htacces který odstrnuje .html a sitemmap a privacy policy a nový footer

--- a/index.html
+++ b/index.html
@@ -73,18 +73,15 @@
 
     <div class="header">
       <div class="logo">
-        <a href="index.html">
+        <a href="index">
           <img src="logo-03.png" alt="Logo naší třídy" height="30px" />
         </a>
-      </div>
-      <div class="search">
-        <a href="search.html"><i class="fas fa-search"></i> </a>
       </div>
     </div>
 
     <div id="navbar">
-      <a class="active" href="index.html">Úvod</a>
-      <a href="kalkulacky.html">Vzorce a Kalkulačky</a>
+      <a class="active" href="index">Úvod</a>
+      <a href="kalkulacky">Vzorce a Kalkulačky</a>
       <a href="javascript:void(0)">Contact</a>
     </div>
 
@@ -113,7 +110,7 @@
             Vítám vás na našem novém webu, doufám že se vám líbí. <br />
             Na tomhle webu sice pravděpodobně nenajdete výpisky, ale připravili
             jsme pro vás spoustu jiných věcí jako například
-            <a href="kalkulacky.html"
+            <a href="kalkulacky"
               >Výpis všech vzorců a dokonce proněkteré Kalkulačky</a
             >
             (Zatím nefunkční) A postupně přidáme další. <br />
@@ -125,61 +122,52 @@
     </div>
 
     <!-- Site footer -->
-    <footer class="site-footer">
+    <footer class="page-footer grey darken-3">
       <div class="container">
         <div class="row">
-          <div class="col-sm-12 col-md-6">
-            <h6>About</h6>
-            <p class="text-justify">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Corrupti, tempore aspernatur! Eveniet, voluptate reprehenderit! Id
-              rerum sapiente perferendis ullam nesciunt numquam dignissimos
-              quasi maxime quod! Optio quibusdam doloribus dolorum molestias!
+          <div class="col l6 s12">
+            <h5 class="white-text">GVH KVARTA</h5>
+            <p class="grey-text text-lighten-4">
+              Jednoduchý web stvořený pro naší třídu. <br />
+              Používáním webu také souhlasíte s
+              <a href="podminky">Podmínkama používání</a>
             </p>
           </div>
-
-          <div class="col-xs-6 col-md-3">
-            <h6>Užitečné odkazy</h6>
-            <ul class="footer-links">
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Odkazy</h5>
+            <ul>
               <li>
-                <a href="https://discord.gg/8ZVu3na"
-                  >Přpojte se na náš Discord server</a
+                <a class="grey-text text-lighten-3 footer_link" href="#!"
+                  >Přispějte svým kódem</a
                 >
               </li>
-
               <li>
-                <a href="resources.html">Použitý kód a fotky</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-xs-6 col-md-3">
-            <h6>Rychlé odkazy</h6>
-            <ul class="footer-links">
-              <li>
-                <a href="https://github.com/Kendy205/gvhkvarta">Přidejte kód</a>
+                <a class="grey-text text-lighten-3 footer_link" href="sitemap"
+                  >Mapa Stránek</a
+                >
               </li>
               <li>
-                <a href="privacipolicy.html">Privacy Policy</a>
+                <a class="grey-text text-lighten-3 footer_link" href="resources"
+                  >Zdroje</a
+                >
               </li>
-              <li><a href="sitemap.html">Mapa stránek</a></li>
+              <li>
+                <a
+                  class="grey-text text-lighten-3 footer_link"
+                  href="https://discord.gg/8ZVu3na"
+                  >Připoj se na náš Discord</a
+                >
+              </li>
             </ul>
           </div>
         </div>
-        <hr />
       </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 col-sm-6 col-xs-12">
-            <p class="copyright-text">
-              Copyright &copy; 2020 All Rights Reserved by
-              <a href="#">gvhkvarta.cf</a>.
-            </p>
-            <p class="made">
-              Made with <i class="fas fa-heart"></i> by Tomáš Kebrle, Daniel
-              Ransdorf
-            </p>
-          </div>
+      <div class="footer-copyright">
+        <div class="container">
+          © 2020 gvhkvarta.cf
+          <a class="grey-text text-lighten-4 right" href="podminky"
+            >Podmínky Používání</a
+          >
         </div>
       </div>
     </footer>
