--- a/privacy.html
+++ b/privacy.html
@@ -15,35 +15,24 @@
       })(window, document, 'script', 'dataLayer', 'GTM-MM79V2N');
     </script>
     <!-- End Google Tag Manager -->
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/png" href="" />
-    <meta charset="utf-8" />
-    <title>Úvod|gvhkvarta.cf</title>
+
     <!-- Compiled and minified CSS -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
-
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" href="" />
+    <meta charset="utf-8" />
+    <title>Úvod|gvhkvarta.cf</title>
     <script
       src="https://kit.fontawesome.com/29ece32e74.js"
       crossorigin="anonymous"
     ></script>
-    <link
-      href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
-      rel="stylesheet"
-    />
-    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    />
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
@@ -71,38 +60,80 @@
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <div class="header">
-      <div class="logo">
+      <div class="header_logo">
         <a href="index">
           <img src="logo-03.png" alt="Logo naší třídy" height="30px" />
         </a>
-      </div>
-      <div class="search">
-        <a href="search"><i class="fas fa-search"></i> </a>
       </div>
     </div>
 
     <div id="navbar">
       <a class="active" href="index">Úvod</a>
-      <a href="kalkulacky">Vzorce a Kalkulačky</a>
+      <a href="kalkulacky">Kalkulačky</a>
       <a href="javascript:void(0)">Contact</a>
     </div>
-
+    <!--CONTENT-->
     <div class="content">
-      Na tomto tomto webu jsem využil následujíci zdroje:
-      <ul>
-        <li>
-          <a href="https://codepen.io/scanfcode/pen/MEZPNd">Footer Template</a>
-        </li>
-        <li>
-          <a href="https://www.w3schools.com/howto/howto_js_navbar_sticky.asp"
-            >Fixed Navbar</a
+      <div class="podminky">
+        <h1>Podmínky používání</h1>
+        <p>
+            <ul>
+                <li>Jsem si plně vědom, že všechny informace na této stránce nemusí být pravdivé a že vlastník za ně neručí</li>
+            </ul>
+        </p>
+      </div>
+      <div class="cookies">
+        <h1>Jaké informace sbírame?</h1>
+        <h4>Co jsou to cookies?</h4>
+        <p>
+          Soubory cookies jsou krátké textové soubory, které internetová stránka
+          odešle do Vašeho prohlížeče. Umožňují internetové stránce zaznamenat
+          informace o Vaší návštěvě, například zvolený jazyk a podobně.
+          Následující návštěva stránek tak pro Vás může být snazší a
+          příjemnější. Soubory cookies jsou důležité, neboť bez nich by
+          procházení sítě Internet bylo mnohem složitější. Soubory cookies
+          umožňují lepší využití naší internetové stránky a přizpůsobení jejího
+          obsahu Vašim potřebám. Soubory cookies používá téměř každá internetová
+          stránka na světě. Soubory cookies jsou užitečné, protože zvyšují
+          uživatelskou přívětivost opakovaně navštívené internetové stránky.
+        </p>
+        <h4>Druhy souborů cookies</h4>
+        <p>
+          Relační (tedy dočasné) soubory cookies nám umožňují propojovat Vaše
+          jednotlivé aktivity po dobu prohlížení těchto internetových stránek. V
+          okamžiku otevření okna Vašeho prohlížeče se tyto soubory aktivují a
+          deaktivují se po zavření okna Vašeho prohlížeče. Relační cookies jsou
+          dočasné a po zavření prohlížeče se všechny tyto soubory vymažou.
+          <br />
+          Trvalé soubory cookies nám pomáhají Váš počítač identifikovat,
+          jestliže opětovně navštívíte naši internetovou stránku. Další výhodou
+          trvalých cookies je to, že nám umožňují přizpůsobit naše internetové
+          stránky Vašim potřebám.
+        </p>
+        <h4>Využívání souborů cookies</h4>
+        <p>
+          V souladu s ustanovením § 89 odst. 3 zák. č. 127/2005 Sb., o
+          elektronických komunikacích, v účinném znění, si Vás tímto dovolujeme
+          informovat, že naše internetové stránky využívají pro svoji činnost
+          soubory cookies, tedy Vaše soubory cookies, včetně trvalých,
+          zpracováváme. <br />
+          Internetové prohlížeče obvykle obsahují správu souborů cookies. V
+          rámci nastavení Vašeho prohlížeče tak pravděpodobně můžete jednotlivé
+          soubory cookies ručně mazat, blokovat či zcela zakázat jejich
+          používání. Pro více informací použijte nápovědu Vašeho internetového
+          prohlížeče.
+          <b
+            >Jsou-li cookies povoleny, lze toto nastavení internetového
+            prohlížeče považovat za souhlas se zpracováním osobních údajů.
+            Prohlížeč je nástrojem zprostředkování souhlasu.</b
           >
-        </li>
-        <li><a href="https://fontawesome.com/icons/">Ikonky</a></li>
-      </ul>
+        </p>
+      </div>
     </div>
+    <br><br><br><br><br>
 
-    <!-- Site footer -->
+    <!--Footer-->
+
     <footer class="page-footer grey darken-3">
       <div class="container">
         <div class="row">
@@ -123,12 +154,16 @@
                 >
               </li>
               <li>
-                <a class="grey-text text-lighten-3 footer_link" href="sitemap"
+                <a
+                  class="grey-text text-lighten-3 footer_link"
+                  href="sitemap"
                   >Mapa Stránek</a
                 >
               </li>
               <li>
-                <a class="grey-text text-lighten-3 footer_link" href="resources"
+                <a
+                  class="grey-text text-lighten-3 footer_link"
+                  href="resources"
                   >Zdroje</a
                 >
               </li>
@@ -152,8 +187,8 @@
         </div>
       </div>
     </footer>
-
     <!--Scripty-->
+    <script src="kalkulacky.js"></script>
     <script>
       window.onscroll = function () {
         myFunction();
@@ -169,6 +204,12 @@
           navbar.classList.remove('sticky');
         }
       }
+    </script>
+
+    <script>
+      import { MDCRipple } from '@material/ripple';
+
+      const buttonRipple = new MDCRipple(document.querySelector('.mdc-button'));
     </script>
   </body>
 </html>
