FIX pro htacces

--- a/index.html
+++ b/index.html
@@ -113,13 +113,38 @@
             <a href="kalkulacky"
               >Výpis všech vzorců a dokonce proněkteré Kalkulačky</a
             >
-            (Zatím nefunkční) A postupně přidáme další. <br />
+            A postupně přidáme další. <br />
             V patičce stránky najdete spoustu užitečných věcí, pokud chcete
             můžete se tam kouknout na celý kód a spoustu dalších věcí
           </div>
         </div>
       </div>
     </div>
+    <br /><br /><br /><br /><br /><br /><br /><br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
 
     <!-- Site footer -->
     <footer class="page-footer grey darken-3">
