--- a/sitemap.html
+++ b/sitemap.html
@@ -59,6 +59,15 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    <!--PRO MOBIL-->
+    <div id="mojeSidenav" class="mojesidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+        >&times;</a
+      >
+      <a href="index">Úvod</a>
+      <a href="kalkulacky">Vzorce a kalkulačky</a>
+      <a href="onasitride">O naší třídě</a>
+    </div>
     <div class="header">
       <div class="header_logo">
         <a href="index">
@@ -70,7 +79,7 @@
     <div id="navbar">
       <a class="active" href="index">Úvod</a>
       <a href="kalkulacky">Kalkulačky</a>
-      <a href="javascript:void(0)">Contact</a>
+      <a href="onasitride">O naší třídě</a>
     </div>
     <!--CONTENT-->
     <div class="content">
@@ -80,6 +89,7 @@
         <li><a href="kalkulacky">Kalkulačky a vzorce</a></li>
         <li><a href="resources">Zdroje</a></li>
         <li><a href="privacy">Podmínky používání</a></li>
+        <li><a href="onasitride">O naší třídě</a></li>
       </ul>
     </div>
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
@@ -151,6 +161,14 @@
         } else {
           navbar.classList.remove('sticky');
         }
+      }
+      function openNav() {
+        document.getElementById('mojeSidenav').style.width = '350px';
+      }
+
+      /* Set the width of the side navigation to 0 and the left margin of the page content to 0 */
+      function closeNav() {
+        document.getElementById('mojeSidenav').style.width = '0';
       }
     </script>
 
