--- a/people/people.html
+++ b/people/people.html
@@ -19,14 +19,6 @@
     <link rel="icon" type="image/png" href="" />
     <meta charset="utf-8" />
     <title>Úvod|gvhkvarta.cf</title>
-    <!-- Compiled and minified CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script
       src="https://kit.fontawesome.com/29ece32e74.js"
       crossorigin="anonymous"
@@ -44,6 +36,14 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
+    <!-- Compiled and minified CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
@@ -70,23 +70,21 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <!--PRO MOBIL-->
-    <div id="mojeSidenav" class="mojesidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-        >&times;</a
-      >
-      <a href="index">Úvod</a>
-      <a href="kalkulacky">Vzorce a kalkulačky</a>
-      <a href="onasitride">O naší třídě</a>
-    </div>
+        <!--PRO MOBIL-->
+        <div id="mojeSidenav" class="mojesidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+              >&times;</a
+            >
+            <a href="index">Úvod</a>
+            <a href="kalkulacky">Vzorce a kalkulačky</a>
+            <a href="onasitride">O naší třídě</a>
+          </div>
+
     <div class="header">
       <div class="logo">
         <a href="index">
           <img src="logo-03.png" alt="Logo naší třídy" height="30px" />
         </a>
-      </div>
-      <div class="search">
-        <a href="search"><i class="fas fa-search"></i> </a>
       </div>
     </div>
 
@@ -97,20 +95,46 @@
     </div>
 
     <div class="content">
-      Na tomto tomto webu jsem využil následujíci zdroje:
-      <ul>
-        <li>
-          <a href="https://codepen.io/scanfcode/pen/MEZPNd">Footer Template</a>
-        </li>
-        <li>
-          <a href="https://www.w3schools.com/howto/howto_js_navbar_sticky.asp"
-            >Fixed Navbar</a
-          >
-        </li>
-        <li><a href="https://fontawesome.com/icons/">Ikonky</a></li>
-      </ul>
+        <div class="center-align">
+            <div class="input-field col s6">
+                <input id="pass" type="text" class="validate">
+                <label for="pass">Zadejte heslo</label>
+              </div>
+            </div>
+            <a class="waves-effect waves-light btn green darken-1" onclick="passConfirm()" id="confirm" href="#">Potvrdit</a>
+        </div>
     </div>
-
+    <script>
+        function passConfirm() {
+        var pass = document.getElementById('pass').value;
+        document.getElementById('confirm').href = 'passwords/' + pass + '.html';
+}
+    </script>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
     <!-- Site footer -->
     <footer class="page-footer grey darken-3">
       <div class="container">
