--- a/privacy.html
+++ b/privacy.html
@@ -59,6 +59,15 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
+        <!--PRO MOBIL-->
+        <div id="mojeSidenav" class="mojesidenav">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+            >&times;</a
+          >
+          <a href="index">Úvod</a>
+          <a href="kalkulacky">Vzorce a kalkulačky</a>
+          <a href="onasitride">O naší třídě</a>
+        </div>
     <div class="header">
       <div class="header_logo">
         <a href="index">
@@ -203,6 +212,14 @@
         } else {
           navbar.classList.remove('sticky');
         }
+      }
+      function openNav() {
+        document.getElementById('mojeSidenav').style.width = '350px';
+      }
+
+      /* Set the width of the side navigation to 0 and the left margin of the page content to 0 */
+      function closeNav() {
+        document.getElementById('mojeSidenav').style.width = '0';
       }
     </script>
 
