Nové vzorce a blog post

--- a/index.html
+++ b/index.html
@@ -106,6 +106,28 @@
       >
       <!-- Posty -->
       <div class="row">
+        <div class="col l12 xl12 s12">
+          <div class="post hoverable card-panel">
+            <div class="post_title">Válečky,kroužky a Matematika</div>
+            <div class="post_info">
+              <div class="post_info_author">
+                <i class="far fa-user"></i>
+                Tomáš Kebrle
+              </div>
+              <div class="post_info_date">
+                <i class="far fa-clock"></i>
+                15/6/2020
+              </div>
+              <br />
+              <div class="post_content flow-text">
+                Ahoj udělal jsem nové kalkulačky na
+                <a href="kalkulacky#matematika">Matematiku</a>, přesněji na
+                obsah Plášť válce, podstavy válce, a kruhu.
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="col l6 xl6 s12">
           <div class="post hoverable card-panel">
             <div class="post_title">Vzorce a Kalkulačky</div>
